[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[project]
name = "pybitcoinlib"
version = "0.0.1"
authors = [
  { name="Luis Schwab", email="" },
]
description = "A bitcoin library based on the Programming Bitcoin book."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Decoding-Bitcoin/luis-programming-bitcoin"
Issues = ""
